<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/description" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tts_group_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickTTS"
            android:text="@string/say_date" />

        <Button
            android:id="@+id/btnSay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickTTS"
            android:text="@string/say_time" />

        <Button
            android:id="@+id/btnSay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickTTS"
            android:text="@string/say_random" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/header_media"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMedia1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickMedia"
            android:text="@string/media_play_pause" />

        <Button
            android:id="@+id/btnMedia2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickMedia"
            android:text="@string/media_next" />

        <Button
            android:id="@+id/btnMedia3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickMedia"
            android:text="@string/media_volume_inc" />


        <Button
            android:id="@+id/btnMedia4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickMedia"
            android:text="@string/media_volume_dec" />


    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/group_general"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnG1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickGeneral"
                android:text="@string/sleep_on" />

            <Button
                android:id="@+id/btnG2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickGeneral"
                android:text="@string/sleep_off" />

            <Button
                android:id="@+id/btnG3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickGeneral"
                android:text="@string/general_show_toast" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>